Add db configuration with env variables

--- a/teas2/src/main/resources/application.properties
+++ b/teas2/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=8184
+
+#MongoDB
+spring.data.mongodb.port=27017
+# nur docker?
+spring.data.mongodb.host=${MONGODB_HOST}
+#name, unter der die datenbank angelegt, bzw. gefunden werden kann
+spring.data.mongodb.database=${DATABASE_NAME}
