--- a/teas2/src/main/resources/application.properties
+++ b/teas2/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8184
+spring.application.name=teas2
 
 #MongoDB
 spring.data.mongodb.port=27017
@@ -6,3 +7,6 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.host=${MONGODB_HOST}
 #name, unter der die datenbank angelegt, bzw. gefunden werden kann
 spring.data.mongodb.database=${DATABASE_NAME}
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK}/realms/teapot
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK}/realms/teapot/protocol/openid-connect/certs
