create readme, make mongodb host a env variable, rm eureka client

--- a/teas/src/main/resources/application.properties
+++ b/teas/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 server.port=8084
 spring.application.name=teaservice
 # discovery-service is the name of the container. change to localhost, when running without container
-eureka.client.serviceUrl.defaultZone = http://discovery-service:8761/eureka
+#eureka.client.serviceUrl.defaultZone = http://discovery-service:8761/eureka
 
 #MongoDB
 spring.data.mongodb.port=27017
 # nur docker
-spring.data.mongodb.host=mongo_db
-#name, unter der die datenbank angelegt, bzw. gefunden werden kann
+spring.data.mongodb.host=${MONGO_DB}
+#name, unter dem die datenbank angelegt, bzw. gefunden werden kann
 spring.data.mongodb.database=teas-compose
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK}/realms/teapot
