--- a/teas/src/main/resources/application.properties
+++ b/teas/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name=teaservice
 #MongoDB
 spring.data.mongodb.port=27017
 # nur docker
-spring.data.mongodb.host=${MONGO_DB}
+spring.data.mongodb.host=${MONGODB_HOST}
 #name, unter dem die datenbank angelegt, bzw. gefunden werden kann
 spring.data.mongodb.database=teas-compose
 
