--- a/gateway2/src/main/resources/application.yml
+++ b/gateway2/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8180
+  port: 8080
 
 spring:
   application:
@@ -35,8 +35,21 @@ spring:
           filters:
             - SetPath=/getmilk
 
+      default-filters:
+        - TokenRelay=
+
   security:
     oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: ${KEYCLOAK}/realms/teapot
+      client:
+        provider:
+          keycloak-provider:
+            jwk-set-uri: ${keycloak.server-url}/realms/teapot/protocol/openid-connect/certs
+            issuer-uri: ${keycloak.server-url}/realms/teapot
+        registration:
+          keycloak-gateway-client:
+            provider: keycloak-provider
+            scope: openid
+            client-id: teapot-gateway
+            client-secret: ${client-secret}
+            authorization-grant-type: authorization_code
+            redirect-uri: 'http://localhost:8080/login/oauth2/code/{registrationId}'
