--- a/teas/src/main/resources/application.properties
+++ b/teas/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.data.mongodb.port=27017
 # nur docker
 spring.data.mongodb.host=${MONGODB_HOST}
 #name, unter dem die datenbank angelegt, bzw. gefunden werden kann
-spring.data.mongodb.database=teas-compose
+spring.data.mongodb.database=${DATABASE_NAME}
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK}/realms/teapot
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK}/realms/teapot/protocol/openid-connect/certs
