--- a/compose.yml
+++ b/compose.yml
@@ -42,6 +42,7 @@ services:
         environment:
             - MONGODB_HOST=mongo_db_2
             - DATABASE_NAME=teas2-db
+            - KEYCLOAK=http://host.docker.internal:10001
 #        restart: always
         ports:
             - 8184:8184
