--- a/teas/pom.xml
+++ b/teas/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>teas</artifactId>
+    <artifactId>teas_rs</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>teas</name>
     <description>teas</description>
