--- a/gateway2/pom.xml
+++ b/gateway2/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>ra.ula</groupId>
-    <artifactId>gateway2</artifactId>
+    <artifactId>gateway2_client</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>gateway2</name>
     <description>gateway2</description>
