--- a/gateway2/src/main/resources/application.yml
+++ b/gateway2/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
   port: 8181
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+
 spring:
   application:
     name: gateway2
@@ -28,12 +33,12 @@ spring:
           filters:
             - SetPath=/teas/maketea/{teaID}
 
-        - id: milk
-          uri: ${MILK}
-          predicates:
-            - Path=/milk
-          filters:
-            - SetPath=/getmilk
+#        - id: milk
+#          uri: ${MILK}
+#          predicates:
+#            - Path=/milk
+#          filters:
+#            - SetPath=/getmilk
 
       default-filters:
         - TokenRelay=
@@ -43,8 +48,8 @@ spring:
       client:
         provider:
           keycloak-provider:
-            jwk-set-uri: ${KEYCLOAK}/realms/teapot/protocol/openid-connect/certs
-            issuer-uri: ${KEYCLOAK}/realms/teapot
+            jwk-set-uri: ${KEYCLOAK.SERVER-URL}/realms/teapot/protocol/openid-connect/certs
+            issuer-uri: ${KEYCLOAK.SERVER-URL}/realms/teapot
         registration:
           keycloak-gateway-client:
             provider: keycloak-provider
