--- a/teas/src/main/resources/application.properties
+++ b/teas/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8184
 spring.application.name=teaservice
 # discovery-service is the name of the container. change to localhost, when running without container
-#eureka.client.serviceUrl.defaultZone = http://discovery-service:8761/eureka
+eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
 
 #MongoDB
 spring.data.mongodb.port=27017
@@ -11,8 +11,8 @@ spring.data.mongodb.host=${MONGODB_HOST}
 #name, unter dem die datenbank angelegt, bzw. gefunden werden kann
 spring.data.mongodb.database=${DATABASE_NAME}}
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK}/realms/teapot
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK}/realms/teapot/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK.SERVER-URL}/realms/teapot
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK.SERVER-URL}/realms/teapot/protocol/openid-connect/certs
 
 #spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:10001/auth/realms/teapot
 #spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:10001/auth/realms/teapot/protocol/openid-connect/certs
