--- a/teas/src/main/resources/application.properties
+++ b/teas/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 #! no special characters here, not even in comments, otherwise build error because of encoding!
+# environment variables are set in the run configuration
+
 server.port=8184
 spring.application.name=teaservice
 # discovery-service is the name of the container. change to localhost, when running without container
@@ -6,9 +8,9 @@ eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
 
 #MongoDB
 spring.data.mongodb.port=27017
-# nur docker
+# just docker
 spring.data.mongodb.host=${MONGODB_HOST}
-#name, unter dem die datenbank angelegt, bzw. gefunden werden kann
+# name of the database
 spring.data.mongodb.database=${DATABASE_NAME}}
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK.SERVER-URL}/realms/teapot
